vivado/ready/Chebyshev/proj/sol/sol.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'chebyshev.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from chebyshev.cpp:1:
In file included from chebyshev.cpp:1:
./chebyshev.h:19:22: error: expected namespace name
using namespace std::chrono;
                ~~~~~^
./chebyshev.h:31:1: error: unknown type name 'DataFlow'
DataFlow *createDataFlow(int id, int copies);
^
In file included from chebyshev.cpp:1:
chebyshev.cpp:34:5: error: use of undeclared identifier 'high_resolution_clock'
    high_resolution_clock::time_point s;
    ^
chebyshev.cpp:35:5: error: use of undeclared identifier 'duration'
    duration<double> diff = {};
    ^
chebyshev.cpp:35:20: error: expected '(' for function-style cast or type construction
    duration<double> diff = {};
             ~~~~~~^
chebyshev.cpp:35:22: error: use of undeclared identifier 'diff'
    duration<double> diff = {};
                     ^
chebyshev.cpp:35:29: error: expected expression
    duration<double> diff = {};
                            ^
chebyshev.cpp:38:9: error: use of undeclared identifier 's'
        s = high_resolution_clock::now();
        ^
chebyshev.cpp:38:13: error: use of undeclared identifier 'high_resolution_clock'
        s = high_resolution_clock::now();
            ^
chebyshev.cpp:43:9: error: use of undeclared identifier 'diff'
        diff += high_resolution_clock::now() - s;
        ^
chebyshev.cpp:43:17: error: use of undeclared identifier 'high_resolution_clock'
        diff += high_resolution_clock::now() - s;
                ^
chebyshev.cpp:43:48: error: use of undeclared identifier 's'
        diff += high_resolution_clock::now() - s;
                                               ^
chebyshev.cpp:46:27: error: use of undeclared identifier 'diff'
    double cpuExecTime = (diff.count() * 1000) / (100);
                          ^
chebyshev.cpp:97:5: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    auto cgraArch = new CgraArch(0, 128, 8, 8, 8, 1, 2);
    ^
chebyshev.cpp:97:25: error: unknown type name 'CgraArch'
    auto cgraArch = new CgraArch(0, 128, 8, 8, 8, 1, 2);
                        ^
chebyshev.cpp:98:5: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    auto cgraHw = new Cgra();
    ^
chebyshev.cpp:98:23: error: unknown type name 'Cgra'
    auto cgraHw = new Cgra();
                      ^
chebyshev.cpp:99:5: error: use of undeclared identifier 'Scheduler'
    Scheduler scheduler(cgraArch);
    ^
chebyshev.cpp:100:10: error: no member named 'vector' in namespace 'std'
    std::vector<DataFlow *> dfs;
    ~~~~~^
chebyshev.cpp:100:17: error: use of undeclared identifier 'DataFlow'
    std::vector<DataFlow *> dfs;
                ^
chebyshev.cpp:100:27: error: expected expression
    std::vector<DataFlow *> dfs;
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 warnings and 20 errors generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
